oxiplate-derive/tests/broken/strings/ascii-escape-span.stderr
error: Expected an expression.
 --> tests/broken/strings/ascii-escape-span.rs:4:28
  |
4 | #[oxiplate_inline("hello\n{{")]
  |                            ^
